--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="right-hand-data">
             
-            <div class="title">Todya</div>
+            <div class="title">Today</div>
 
             <div class="cards-container">
 
